--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Favorite Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna</a>
+    <a href="recipes/steak.html">Steak</a>
+    <a href="recipes/taco.html">Taco</a>
 </body>
 </html>
