--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,1 +1,26 @@
 <h1>Lasagna</h1>
+<img src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg">
+<h3>A tray of lasagna</h3>
+<p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
+
+<h2>Ingrediants</h2>
+<ul>
+    <li>Meat</li>
+    <li>Onion and garlic</li>
+    <li>Tomoato products</li>
+    <li>Sugar</li>
+    <li>Spice and seasonings</li>
+    <li>Lasagna noodles</li>
+    <li>Cheese</li>
+    <li>Egg</li>
+    
+</ul>
+<h2>Steps</h2>
+<ol>
+    <li>    Make the meat sauce.</li>
+    <li>Cook the noodles.</li>
+    <li>Make the ricotta mixture.</li>
+    <li>Layer the lasgna according to the recipe instructions.</li>
+    <li>Cover with foil and bake.</li>
+    <li>Let the lasagna rest before serving.</li>
+</ol>
