--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,5 +1,4 @@
-<link rel="stylesheet" href="/stylesheets/mpStyles.css">
-<h1 class="start-page">Lasagna</h1>
+<h1>Lasagna</h1>
 <img src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg">
 <h3>A tray of lasagna</h3>
 <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
